Fixed the calculators, were using an older jQuery library which didn't work

--- a/AV/Sorting/StringSfold.html
+++ b/AV/Sorting/StringSfold.html
@@ -5,7 +5,6 @@
 <head>
   <meta charset="utf-8">
   <title>Improved String Folding</title>
-  <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="HashFunc.css" type="text/css" />
 </head>
@@ -23,13 +22,8 @@
     <p class="output" ></p>
   </div>
 
-  <script
-    src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js">
-  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
-  <script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  </script>
   <script src="../../lib/ODSA.js"></script>
   <script src="../opendsaAV.js"></script>
   <script src="StringSfold.js"></script>
