--- a/AV/Sorting/Birthday.html
+++ b/AV/Sorting/Birthday.html
@@ -10,7 +10,6 @@
 <head>
   <meta charset="utf-8">
   <title>Birthday Problem Calculator</title>
-  <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="Birthday.css" type="text/css" />
 </head>
@@ -35,9 +34,7 @@
     <p class="output" ></p>
   </div>
 
-  <script
-    src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js">
-  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <script type="text/javascript"
     src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
