Reverted showHide function in opendsaMOD.js as a quick fix to a bug where the showHide buttons don't work

--- a/AV/Sorting/Birthday.html
+++ b/AV/Sorting/Birthday.html
@@ -36,9 +36,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
-  <script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  </script>
+  <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   <script src="../../lib/ODSA.js"></script>
   <script src="../opendsaAV.js"></script>
   <script src="Birthday.js"></script>
