Changed jQuery links to point to local copy of lib files

--- a/AV/Sorting/insertionsortAV.html
+++ b/AV/Sorting/insertionsortAV.html
@@ -44,10 +44,10 @@
 </div> <!--container-->
 
 <script
-   src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
+   src="../../lib/jquery.min.js">
 </script>
 <script
-  src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js">
+  src="../../lib/jquery-ui.min.js">
 </script>
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/lib/raphael.js"></script>
