--- a/AV/Sorting/Birthday.html
+++ b/AV/Sorting/Birthday.html
@@ -16,8 +16,7 @@
 
 <body>
   <div id="container">
-    <input type="button" name="about" value="About"
-	   style="margin-left:5px; margin-top:5px;"/>
+    <input type="button" id="about" name="about" value="About" />
     <p class="instructions">
       Calculate the probability of a collision.<br/>
       Formula Used: \(1 - \frac{t!}{(t-n)! * (t^n)}\)<br/>
@@ -34,7 +33,7 @@
     <p class="output" ></p>
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="../../lib/jquery.min.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   <script src="../../lib/ODSA.js"></script>
