--- a/AV/Sorting/MidSquare.html
+++ b/AV/Sorting/MidSquare.html
@@ -24,7 +24,7 @@
     <p class="output" ></p>
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="../../lib/jquery.min.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="../../lib/ODSA.js"></script>
   <script src="../opendsaAV.js"></script>
