--- a/AV/Sorting/heapsortProficiency.html
+++ b/AV/Sorting/heapsortProficiency.html
@@ -38,9 +38,9 @@
       </form>
     </div>
     <script
-       src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
+       src="../../lib/jquery.min.js">
     </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+    <script src="../../lib/jquery-ui.min.js"></script>
 
     <script src="../../JSAV/lib/jquery.transform.light.js"></script>
     <script src="../../JSAV/lib/raphael.js"></script>
