--- a/AV/Sorting/radixLinkAV.html
+++ b/AV/Sorting/radixLinkAV.html
@@ -48,10 +48,10 @@
 </div> <!--container-->
 
 <script
-   src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
+   src="../../lib/jquery.min.js">
 </script>
 <script
-  src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js">
+  src="../../lib/jquery-ui.min.js">
 </script>
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="http://algoviz.org/OpenDSA/JSAV/lib/raphael.js"></script>
