--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -133,7 +133,7 @@
         {% block body %}{% endblock %}
       </div>
       <div class="bottomnav">
-      <p> <a class="contact" style="float:left;color:blue;" href="mailto:opendsa@cs.vt.edu" rel="nofollow">Contact Us</a>&#160;&#160;         
+      <p> <a id="contact_us" class="contact" style="float:left;color:blue;" href="mailto:opendsa@cs.vt.edu" rel="nofollow">Contact Us</a>&#160;&#160;         
       {{ nav() }}</p>
       </div>
       <img style="float:right;" src="_static/nsf1.gif" height="62" width="62" alt="nsf"/> 
