Standardized all AVs and exercises to use opendsaAV.css so that everything looks the same

--- a/AV/Sorting/Birthday.html
+++ b/AV/Sorting/Birthday.html
@@ -23,14 +23,14 @@
       where t is the table size
       and n is the number of records inserted.
     </p>
-    <p>
+    <p class="inputs">
       <label>&nbsp;Table size:&nbsp;</label>
       <input name="tablesize" type="number" value="365"/>
       <label>&nbsp;# of records&nbsp;</label>
-      <input name="numrecs" type="number" value="5"/>&nbsp;
-      <input type="button" name="calculate" value="Calculate" />
+      <input name="numrecs" type="number" value="5" />&nbsp;
+      <input type="button" id="calculate" name="calculate" value="Calculate" />
     </p>
-    <p class="output" ></p>
+    <p class="output"></p>
   </div>
 
   <script src="../../lib/jquery.min.js"></script>
