--- a/AV/Sorting/HashingDeleteProficiency.html
+++ b/AV/Sorting/HashingDeleteProficiency.html
@@ -3,28 +3,27 @@
   <head>
     <title>Hashtable Delete</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
-    <link rel="stylesheet" href="../opendsaPRO.css" type="text/css" />
+    <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+    <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
     <link rel="stylesheet" href="HashingDeleteProficiency.css" />
-    <style>
-</style>
   </head>
   <body>
-    <div id="HashingDeleteProficiency_container" class="container">
-      <table class="headerTable">
+    <div id="container">
+      <table class="proHeaderTable">
         <tr>
-          <td class="headerLeft">&nbsp;</td>
+          <td class="headerLeft">
+            <input type="button" id="help" name="help" value="Help" />
+          </td>
           <td class="headerCenter">
             <p class="jsavexercisecontrols"></p>
           </td>
           <td class="headerRight">
-            <input type="button" id="help" name="help" value="Help" />
             <input type="button" id="about" name="about" value="About" />
             <a id="settings" class="jsavsettings" href="#">Settings</a>
           </td>
         </tr>
       </table>
-      <form id="HashingDeleteProficiency_avc">
+      <form id="HashingDeleteProficiency_avc" class="avcontainer">
         <div class="jsavcanvas">
           <p class="instructLabel">Instructions:</p>
           <p class="instructions">
