--- a/AV/Sorting/ShellsortProficiency.html
+++ b/AV/Sorting/ShellsortProficiency.html
@@ -2,27 +2,29 @@
 <html>
 <head>
   <title>ShellSort Proficiency Exercise</title>
+  <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="../opendsaPRO.css" type="text/css" />
+  <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
   <link rel="stylesheet" href="ShellsortProficiency.css" type="text/css" />
 </head>
 
 <body>
-<div id="container" class="container">
-  <table class="headerTable">
+<div id="container">
+  <table class="proHeaderTable">
     <tr>
-      <td class="headerLeft">&nbsp;</td>
+      <td class="headerLeft">
+        <input type="button" id="help" name="help" value="Help" />
+      </td>
       <td class="headerCenter">
         <p class="jsavexercisecontrols"></p>
       </td>
       <td class="headerRight">
-        <input type="button" id="help" name="help" value="Help" />
         <input type="button" id="about" name="about" value="About" />
         <a id="settings" class="jsavsettings" href="#">Settings</a>
       </td>
     </tr>
   </table>
-  <form id="ShellsortProficiency_avc">
+  <form id="ShellsortProficiency_avc" class="avcontainer">
     <div class="jsavcanvas">
       <p class="instructLabel">Instructions:</p>
       <p class="instructions">
