--- a/AV/Sorting/heapsortProficiency.html
+++ b/AV/Sorting/heapsortProficiency.html
@@ -3,28 +3,27 @@
   <head>
     <title>Heapsort</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
-    <link rel="stylesheet" href="../opendsaPRO.css" type="text/css" />
+    <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+    <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
     <link rel="stylesheet" href="heapsortProficiency.css" />
-    <style>
-</style>
   </head>
   <body>
-    <div id="HeapsortProficiency_container" class="container">
-      <table class="headerTable">
+    <div id="container">
+      <table class="proHeaderTable">
         <tr>
-          <td class="headerLeft">&nbsp;</td>
+          <td class="headerLeft">
+            <input type="button" id="help" name="help" value="Help" />
+          </td>
           <td class="headerCenter">
             <p class="jsavexercisecontrols"></p>
           </td>
           <td class="headerRight">
-            <input type="button" id="help" name="help" value="Help" />
             <input type="button" id="about" name="about" value="About" />
             <a id="settings" class="jsavsettings" href="#">Settings</a>
           </td>
         </tr>
       </table>
-      <form id="heapsortProficiency_avc">
+      <form id="heapsortProficiency_avc" class="avcontainer">
         <div class="jsavcanvas">
           <p class="instructLabel">Instructions:</p>
           <p class="instructions">
@@ -37,11 +36,8 @@
         </div>
       </form>
     </div>
-    <script
-       src="../../lib/jquery.min.js">
-    </script>
+    <script src="../../lib/jquery.min.js"></script>
     <script src="../../lib/jquery-ui.min.js"></script>
-
     <script src="../../JSAV/lib/jquery.transform.light.js"></script>
     <script src="../../JSAV/lib/raphael.js"></script>
     <script src="../../JSAV/build/JSAV-min.js"></script>
