--- a/AV/Sorting/quicksortAV.html
+++ b/AV/Sorting/quicksortAV.html
@@ -2,16 +2,27 @@
 <html>
 <head>
   <title>Quicksort AV</title>
+  <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="sortingAV.css" type="text/css" />
+  <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
   <link rel="stylesheet" href="quicksortAV.css" type="text/css" />
 </head>
 
 <body>
 <div id="container">
-  <input type="button" id="about" name="about" value="About" />
-  <a id="settings" class="jsavsettings" href="#">Settings</a>
-  <h1>Quicksort Visualization</h1>
+  <table class="headerTable">
+    <tr>
+      <td class="headerLeft">
+      </td>
+      <td class="headerCenter">
+        <h1>Quicksort Visualization</h1>
+      </td>
+      <td class="headerRight">
+        <input type="button" id="about" name="about" value="About" />
+        <a id="settings" class="jsavsettings" href="#">Settings</a>
+      </td>
+    </tr>
+  </table>
 
   <form id="ssperform">
     <p>
@@ -19,14 +30,6 @@
       <input type="button" id="reset" name="reset" value="Reset" />
       <label for="arraysize">&nbsp;List size:&nbsp;</label>
       <select id="arraysize">
-        <option value="5">5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
-        <option selected="selected" value="8">8</option>
-        <option value="9">9</option>
-        <option value="10">10</option>
-        <option value="11">11</option>
-        <option value="12">12</option>
       </select>
       <label for="arrayValues">&nbsp;Your values:&nbsp;</label>
       <input size="60" name="arrayValues" id="arrayValues" type="text"
@@ -46,6 +49,7 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
 <script src="../opendsaAV.js"></script>
+<script src="../av.js"></script>
 <script src="quicksortAV.js"></script>
 </body>
 </html>
