--- a/AV/Sorting/radixArrayAV.html
+++ b/AV/Sorting/radixArrayAV.html
@@ -2,32 +2,31 @@
 <html>
 <head>
   <title>Radix Sort AV</title>
+  <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="sortingAV.css" type="text/css" />
+  <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
 </head>
 
 <body>
 <div id="container" style="height: 580px;">
-  <input type="button" id="about" name="about" value="About" />
-  <a id="settings" class="jsavsettings" href="#">Settings</a>
-  <input type="button" id="help" name="help" value="Help" />
-  <h1>Array-based Radix Sort Visualization</h1>
+  <table class="headerTable">
+    <tr>
+      <td class="headerLeft">
+        <input type="button" id="help" name="help" value="Help" />
+      </td>
+      <td class="headerCenter">
+        <h1>Array-based Radix Sort Visualization</h1>
+      </td>
+      <td class="headerRight">
+        <input type="button" id="about" name="about" value="About" />
+        <a id="settings" class="jsavsettings" href="#">Settings</a>
+      </td>
+    </tr>
+  </table>
 
   <form id="ssperform" style="margin-top:10px;">
     <label for="arraysize">&nbsp;Array size:&nbsp;</label>
     <select id="arraysize">
-      <option value="5">5</option>
-      <option value="6">6</option>
-      <option value="7">7</option>
-      <option selected="selected" value="8">8</option>
-      <option value="9">9</option>
-      <option value="10">10</option>
-      <option value="11">11</option>
-      <option value="12">12</option>
-      <option value="13">13</option>
-      <option value="14">14</option>
-      <option value="15">15</option>
-      <option value="16">16</option>
     </select>
 
     <!-- Number of Digits -->
@@ -64,6 +63,7 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
 <script src="../opendsaAV.js"></script>
+<script src="../av.js"></script>
 <script src="radixArrayAV.js"></script>
 </body>
 </html>
