--- a/AV/Sorting/radixLinkAV.html
+++ b/AV/Sorting/radixLinkAV.html
@@ -2,39 +2,45 @@
 <html>
 <head>
   <title>Radix Sort Linked Lists AV</title>
+  <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
   <link rel="stylesheet" href="radixLinkAV.css" type="text/css" />
 </head>
 
 <body>
 <div id="container">
-  <input type="button" id="about" name="about" value="About" />
-  <a id="settings" class="jsavsettings" href="#">Settings</a>
-  <input type="button" id="help" name="help" value="Help" />
-  <h1>Radix Sort Linked List Visualization</h1>
+  <table class="headerTable">
+    <tr>
+      <td class="headerLeft">
+        <input type="button" id="help" name="help" value="Help" />
+      </td>
+      <td class="headerCenter">
+        <h1>Linked List Radix Sort Visualization</h1>
+      </td>
+      <td class="headerRight">
+        <input type="button" id="about" name="about" value="About" />
+        <a id="settings" class="jsavsettings" href="#">Settings</a>
+      </td>
+    </tr>
+  </table>
 
   <form id="ssperform">
-    <label for="arraysize">&nbsp;Array size:&nbsp;</label>
-    <select id="arraysize">
-      <option value="5">5</option>
-      <option value="6">6</option>
-      <option value="7">7</option>
-      <option selected="selected" value="8">8</option>
-      <option value="9">9</option>
-      <option value="10">10</option>
-    </select>
-
-    <!-- Number of Digits -->
-    <label for="digitsize">&nbsp;Digits:&nbsp;</label> 
-    <select id="digitsize">
-      <option value="1"> 1 </option>
-      <option selected="selected" value="2"> 2 </option>
-      <option value="3"> 3 </option>
-      <option value="4"> 4 </option>
-    </select>
     <p>
       <input type="button" id="run" name="run" value="Run" />
       <input type="button" id="reset" name="reset" value="Reset" />
+      <label for="arraysize">&nbsp;Array size:&nbsp;</label>
+      <select id="arraysize">
+      </select>
+
+      <!-- Number of Digits -->
+      <label for="digitsize">&nbsp;Digits:&nbsp;</label> 
+      <select id="digitsize">
+        <option value="1"> 1 </option>
+        <option selected="selected" value="2"> 2 </option>
+        <option value="3"> 3 </option>
+        <option value="4"> 4 </option>
+      </select>
       <label for="arrayValues">&nbsp;Array values:&nbsp;</label>
       <input size="65" name="arrayValues" id="arrayValues" type="text" 
          placeholder="Type space-separated values, or click 'run' to use random values" />
@@ -47,17 +53,14 @@
   </div> <!--avcontainer-->
 </div> <!--container-->
 
-<script
-   src="../../lib/jquery.min.js">
-</script>
-<script
-  src="../../lib/jquery-ui.min.js">
-</script>
+<script src="../../lib/jquery.min.js"></script>
+<script src="../../lib/jquery-ui.min.js"></script>
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="http://algoviz.org/OpenDSA/JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
 <script src="../opendsaAV.js"></script>
+<script src="../av.js"></script>
 <script src="radixLinkAV.js"></script>
 </body>
 </html>
