--- a/AV/Sorting/selectionsortAV.html
+++ b/AV/Sorting/selectionsortAV.html
@@ -4,7 +4,7 @@
   <title>Selection Sort Visualization</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="sortingAV.css" type="text/css" />
+  <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
   <style>
     #container {
       height: 610px;
@@ -14,9 +14,19 @@
 
 <body>
 <div id="container">
-  <input type="button" id="about" name="about" value="About" />
-  <a id="settings" class="jsavsettings" href="#">Settings</a>
-  <h1>Selection Sort Visualization</h1>
+  <table class="headerTable">
+    <tr>
+      <td class="headerLeft">
+      </td>
+      <td class="headerCenter">
+        <h1>Selection Sort Visualization</h1>
+      </td>
+      <td class="headerRight">
+        <input type="button" id="about" name="about" value="About" />
+        <a id="settings" class="jsavsettings" href="#">Settings</a>
+      </td>
+    </tr>
+  </table>
 
   <form id="ssperform">
     <p>
@@ -24,21 +34,10 @@
       <input id="reset" type="button" name="reset" value="Reset" />
       <label for="arraysize">&nbsp;List size:&nbsp;</label>
       <select id="arraysize">
-        <option value = 5>5</option>
-        <option value = 6>6</option>
-        <option value = 7>7</option>
-        <option selected value = 8>8</option>
-        <option value = 9>9</option>
-        <option value = 10>10</option>
-        <option value = 11>11</option>
-        <option value = 12>12</option>
-        <option value = 13>13</option>
-        <option value = 14>14</option>
-        <option value = 15>15</option>
-        <option value = 16>16</option>
       </select>
       <label for="arrayValues">&nbsp;Your values:&nbsp;</label>
-      <input size="60" name="arrayValues" id="arrayValues" type="text" />
+      <input size="65" name="arrayValues" id="arrayValues" type="text" 
+         placeholder="Type space-separated values, or just hit 'run' to use random values" />
     </p>
   </form>
   <div id="selectionsortAV_avc" class="avcontainer">
@@ -59,6 +58,7 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
 <script src="../opendsaAV.js"></script>
+<script src="../av.js"></script>
 <script src="selectionsortAV.js"></script>
 </body>
 </html>
