--- a/AV/Sorting/radixLinkAV.html
+++ b/AV/Sorting/radixLinkAV.html
@@ -56,7 +56,7 @@
 <script src="../../lib/jquery.min.js"></script>
 <script src="../../lib/jquery-ui.min.js"></script>
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
-<script src="http://algoviz.org/OpenDSA/JSAV/lib/raphael.js"></script>
+<script src="../../JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
 <script src="../opendsaAV.js"></script>
