--- a/AV/Hashing/HashingDeleteProficiency.html
+++ b/AV/Hashing/HashingDeleteProficiency.html
@@ -23,7 +23,7 @@
           </td>
         </tr>
       </table>
-      <form id="HashingDeleteProficiency_avc" class="avcontainer">
+      <form class="avcontainer">
         <div class="jsavcanvas">
           <p class="instructLabel">Instructions:</p>
           <p class="instructions">
@@ -37,11 +37,8 @@
         </div>
       </form>
     </div>
-    <script
-       src="../../lib/jquery.min.js">
-    </script>
+    <script src="../../lib/jquery.min.js"></script>
     <script src="../../lib/jquery-ui.min.js"></script>
-
     <script src="../../JSAV/lib/jquery.transform.light.js"></script>
     <script src="../../JSAV/lib/raphael.js"></script>
     <script src="../../JSAV/build/JSAV-min.js"></script>
