--- a/AV/Hashing/hashAV.html
+++ b/AV/Hashing/hashAV.html
@@ -25,7 +25,7 @@
         </td>
       </tr>
     </table>
-    <div id="hashAV_avc" class="avcontainer">
+    <div class="avcontainer">
       <p class="jsavoutput jsavscroll" readonly="readonly"></p>
       <ol id="hashTable"></ol>
       <input type="button" id="showcounts" name="showcounts" value="Show Counts" />
