--- a/AV/Sorting/heapsortProficiency.html
+++ b/AV/Sorting/heapsortProficiency.html
@@ -23,7 +23,7 @@
           </td>
         </tr>
       </table>
-      <form id="heapsortProficiency_avc" class="avcontainer">
+      <form class="avcontainer">
         <div class="jsavcanvas">
           <p class="instructLabel">Instructions:</p>
           <p class="instructions">
