--- a/AV/Sorting/insertionsortAV.html
+++ b/AV/Sorting/insertionsortAV.html
@@ -35,7 +35,7 @@
          placeholder="Type space-separated values, or just hit 'run' to use random values" />
     </p>
   </form>
-  <div id="insertionsortAV_avc" class="avcontainer">
+  <div class="avcontainer">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
     <p class="jsavoutput jsavline" readonly="readonly"></p>
@@ -49,7 +49,6 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
 <script src="../opendsaAV.js"></script>
-<script src="../av.js"></script>
 <script src="insertionsortAV.js"></script>
 </body>
 </html>
