--- a/AV/Sorting/mergesortAV.html
+++ b/AV/Sorting/mergesortAV.html
@@ -36,24 +36,19 @@
           placeholder="Space-separated values to use (optional)" />
     </p>
   </form>
-  <div id="mergesortAV_avc" class="avcontainer">
+  <div class="avcontainer">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
     <p class="jsavoutput jsavline" readonly="readonly"></p>
   </div> <!--avcontainer-->
 </div> <!--container-->
 
-<script
-  src="../../lib/jquery.min.js">
-</script>
-<script
-  src="../../lib/jquery-ui.min.js">
-</script>
+<script src="../../lib/jquery.min.js"></script>
+<script src="../../lib/jquery-ui.min.js"></script>
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
 <script src="../opendsaAV.js"></script>
-<script src="../av.js"></script>
 <script src="mergesortAV.js"></script>
 </body>
 </html>
