--- a/AV/Sorting/mergesortProficiency.html
+++ b/AV/Sorting/mergesortProficiency.html
@@ -25,7 +25,7 @@
     </tr>
   </table>
 
-  <form id="mergesortProficiency_avc" class="avcontainer">
+  <form class="avcontainer">
     <p class="instructLabel">Instructions:</p>
     <p class="instructions">
       Start at the bottom left.  Merge two single element arrays to
