--- a/AV/Sorting/quicksortProficiency.html
+++ b/AV/Sorting/quicksortProficiency.html
@@ -25,7 +25,7 @@
     </tr>
   </table>
   
-  <form id="quicksortProficiency_avc" class="avcontainer">
+  <form class="avcontainer">
     <p class="instructLabel">Instructions:</p>
     <p class="instructions">
       This exercise has you perform all of the steps taken by
