--- a/AV/Sorting/SSprofHelp.html
+++ b/AV/Sorting/SSprofHelp.html
@@ -1,9 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 <html>
 <head>
-<title>ShellSort Proficiency Exercise Help Page</title>
+  <title>ShellSort Proficiency Exercise Help Page</title>
+  <meta charset="utf-8" />
   <link rel="stylesheet" href="../help.css" type="text/css" />
-<link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
 </head>
 
 <body>
