--- a/AV/Sorting/ShellsortProficiency.html
+++ b/AV/Sorting/ShellsortProficiency.html
@@ -24,7 +24,7 @@
       </td>
     </tr>
   </table>
-  <form id="ShellsortProficiency_avc" class="avcontainer">
+  <form class="avcontainer">
     <div class="jsavcanvas">
       <p class="instructLabel">Instructions:</p>
       <p class="instructions">
