--- a/AV/Sorting/quicksortAV.html
+++ b/AV/Sorting/quicksortAV.html
@@ -36,7 +36,7 @@
           placeholder="Space-separated values to use (optional)" />
     </p>
   </form>
-  <div id="quicksortAV_avc" class="avcontainer">
+  <div class="avcontainer">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
     <p class="jsavoutput jsavline" readonly="readonly"></p>
@@ -49,7 +49,6 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
 <script src="../opendsaAV.js"></script>
-<script src="../av.js"></script>
 <script src="quicksortAV.js"></script>
 </body>
 </html>
