--- a/AV/Sorting/radixAVHelp.html
+++ b/AV/Sorting/radixAVHelp.html
@@ -1,7 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 <html>
 <head>
   <title>Array-based Radix Sort Visualization Help Page</title>
+  <meta charset="utf-8" />
   <link rel="stylesheet" href="../help.css" type="text/css" />
   <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
 </head>
