--- a/AV/Sorting/selectionsortAV.html
+++ b/AV/Sorting/selectionsortAV.html
@@ -40,25 +40,20 @@
          placeholder="Type space-separated values, or just hit 'run' to use random values" />
     </p>
   </form>
-  <div id="selectionsortAV_avc" class="avcontainer">
+  <div class="avcontainer">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
     <p class="jsavoutput jsavline" readonly="readonly"></p>
   </div> <!--avcontainer-->
 </div> <!--container-->
 
-<script
-   src="../../lib/jquery.min.js">
-</script>
-<script
-  src="../../lib/jquery-ui.min.js">
-</script>
+<script src="../../lib/jquery.min.js"></script>
+<script src="../../lib/jquery-ui.min.js"></script>
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
 <script src="../opendsaAV.js"></script>
-<script src="../av.js"></script>
 <script src="selectionsortAV.js"></script>
 </body>
 </html>
