--- a/AV/Sorting/shellsortAV.html
+++ b/AV/Sorting/shellsortAV.html
@@ -42,7 +42,7 @@
          placeholder="Type space-separated values, or just hit 'run' to use random values" />
     </p>
   </form>
-  <div id="shellsortAV_avc" class="avcontainer">
+  <div class="avcontainer">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
     <p class="jsavoutput jsavline" readonly="readonly"></p>
@@ -56,7 +56,6 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
 <script src="../opendsaAV.js"></script>
-<script src="../av.js"></script>
 <script src="shellsortCODE.js"></script>
 <script src="shellsortAV.js"></script>
 </body>
