--- a/lib/Privacy.html
+++ b/lib/Privacy.html
@@ -102,12 +102,22 @@ Virginia Tech is not responsible for the privacy practices or the
 content of such web sites. 
 </p>
 
-<h2>Local Storage and Session Management</h2>
+<h2>Session Management and Local Storage</h2>
 
 <p>
-Rather than cookies, this site primarily makes use of the HTML5
-Local Storage mechanism for storing information related to completed
-exercises and user interactions.
+This site uses cookies for session management.
+This site manages user sessions using server-side PHP. A unique ID is
+used to identify your browser session. This ID is stored server-side
+in a PHP variable as well as in the MySQL database backend. It is also
+stored on your computer as a cookie, which contains only this session
+ID. The cookie allows us to relate the pages visited during that
+session. Session information is saved in our database and is regarded
+(and protected) as personal information. See the personal information
+section for more information.
+
+This site also makes use of the HTML5 local storage mechanism for
+storing information related to completed exercises and user
+interactions.
 This information is periodically transmitted to our servers, in
 accordance with the privacy restrictions described above.
 </p>
