Fixed the way AV name is set for JSAV events, wrapped AV code in $(document).ready(function () {...}); to ensure the HTML is loaded before the AV code starts manipulating it

--- a/AV/Hashing/Birthday.html
+++ b/AV/Hashing/Birthday.html
@@ -25,9 +25,9 @@
     </p>
     <p class="inputs">
       <label>&nbsp;Table size:&nbsp;</label>
-      <input name="tablesize" type="number" value="365"/>
+      <input id="tablesize" name="tablesize" type="number" value="365"/>
       <label>&nbsp;# of records&nbsp;</label>
-      <input name="numrecs" type="number" value="5" />&nbsp;
+      <input id="numrecs" name="numrecs" type="number" value="5" />&nbsp;
       <input type="button" id="calculate" name="calculate" value="Calculate" />
     </p>
     <p class="output"></p>
