Added a couple of hashing questions, updated Birthday calculator

--- a/AV/Hashing/Birthday.html
+++ b/AV/Hashing/Birthday.html
@@ -23,13 +23,11 @@
       where t is the table size
       and n is the number of records inserted.
     </p>
-    <p class="inputs">
-      <label>&nbsp;Table size:&nbsp;</label>
-      <input id="tablesize" name="tablesize" type="number" value="365"/>
-      <label>&nbsp;# of records&nbsp;</label>
-      <input id="numrecs" name="numrecs" type="number" value="5" />&nbsp;
-      <input type="button" id="calculate" name="calculate" value="Calculate" />
-    </p>
+    <p class="tsize">Table size:</p>
+    <input id="tablesize" name="tablesize" type="number" value="365"/>
+    <p class="nrecs"># of records:</p>
+    <input id="numrecs" name="numrecs" type="number" value="5" />&nbsp;
+    <input type="button" id="calculate" name="calculate" value="Calculate" />
     <p class="output"></p>
   </div>
 
