--- a/Exercises/Hashing/HashFuncSumm.html
+++ b/Exercises/Hashing/HashFuncSumm.html
@@ -17,7 +17,9 @@
   <div class="exercise" data-name="HashFuncMCQ4"></div>
   <div class="exercise" data-name="HashFuncMCQ5"></div>
   <div class="exercise" data-name="HashFuncMCQ6"></div>
-  <div class="exercise" data-name="HashFuncMCQ6"></div>
+  <div class="exercise" data-name="HashFuncMCQ7"></div>
   <div class="exercise" data-name="HashFuncMCQdisk"></div>
+  <div class="exercise" data-name="HashFuncCChance1"></div>
+  <div class="exercise" data-name="HashFuncCChance2"></div>
 </body>
 </html>
