Changed opendsaMOD.js to update proficiency indicators based on localStorage on page load rather than waiting for loadModule to return. Change reference from JSAV.js to JSAV-min.js in AVs.

--- a/AV/Sorting/quicksortProficiency.html
+++ b/AV/Sorting/quicksortProficiency.html
@@ -65,7 +65,7 @@
 <script src="../../lib/jquery.min.js"></script>
 <script src="../../lib/jquery-ui.min.js"></script>
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
-<script src="../../JSAV/build/JSAV.js"></script>
+<script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
 <script src="../opendsaAV.js"></script>
 <script src="quicksortProficiency.js"></script>
