--- a/AV/Development/sackProficiency.html
+++ b/AV/Development/sackProficiency.html
@@ -30,7 +30,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
     <script src="../../JSAV/lib/jquery.transform.light.js"></script>
     <script src="../../JSAV/lib/raphael.js"></script>
-    <script src="../../JSAV/build/JSAV.js"></script>
+    <script src="../../JSAV/build/JSAV-min.js"></script>
     <script src="sackProficiency.js"></script>
 
   </body>
