--- a/AV/Sorting/quicksortProficiency.html
+++ b/AV/Sorting/quicksortProficiency.html
@@ -68,6 +68,7 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
 <script src="../opendsaAV.js"></script>
+<script src="quicksortCODE.js"></script>
 <script src="quicksortProficiency.js"></script>
 </body>
 </html>
