--- a/AV/Hashing/Birthday.html
+++ b/AV/Hashing/Birthday.html
@@ -19,9 +19,9 @@
     <input type="button" id="about" name="about" value="About" />
     <p class="instructions">
       Calculate the probability of a collision.<br/>
-      Formula Used: \(1 - \frac{t!}{(t-n)! * (t^n)}\)<br/>
-      where t is the table size
-      and n is the number of records inserted.
+      Formula Used: \(1 - \frac{t!}{(t-n)! (t^n)}\)<br/>
+      where \(t\) is the table size
+      and \(n\) is the number of records inserted.
     </p>
     <p class="tsize">Table size:</p>
     <input id="tablesize" name="tablesize" type="number" value="365"/>
