Updated Privacy Policy, Intro.rst; start on fixing font size of AVs

--- a/lib/Privacy.html
+++ b/lib/Privacy.html
@@ -101,7 +101,7 @@ for instructional and course credit purposes.
 While the ID and any associated course-related information such as
 an individual's scores and exercise or module completion status can
 be viewed by the OpenDSA research team
-(or in the case of third party sites using our softare, 
+(or in the case of third party sites using our software, 
 the administrators of this site),
 OpenDSA team members will not release such data to anyone
 other than the instructor of that course.
