--- a/AV/Hashing/Birthday.html
+++ b/AV/Hashing/Birthday.html
@@ -11,6 +11,7 @@
   <meta charset="utf-8">
   <title>Birthday Problem Calculator</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
   <link rel="stylesheet" href="Birthday.css" type="text/css" />
 </head>
 
