Tweak privacy policy and site.css

--- a/lib/Privacy.html
+++ b/lib/Privacy.html
@@ -36,7 +36,7 @@ Anyone can clone a copy of our software, and run either a front end content
 distribution that connects to an OpenDSA-approved back-end server
 (which should be safe for you since we would have to approve them to accept their data),
 or run their own server (which could pose a security risk for you).
-The OpenDSA project team can not be responsible for third parties that
+The OpenDSA project team cannot be responsible for third parties that
 use a copy of our software distribution, or modify our software for their
 own purposes.
 You might wish to verify that the content you see is being rendered to you
@@ -125,15 +125,14 @@ or the content of non-OpenDSA web sites.
 <h2>Session Management and Local Storage</h2>
 
 <p>
-This site uses cookies for session management.
 This site manages user sessions using information stored and managed
 on the server.
 A unique ID is used to identify your browser session.
 This ID is stored server-side
 in a Django Python variable as well as in the MySQL database backend.
-It is also stored on your computer as a cookie, which contains only
-this session ID.
-The cookie allows us to relate the pages visited during that session.
+It is also stored on your computer in local storage in a variable
+which contains only this session ID.
+This allows us to relate the pages visited during that session.
 Session information is saved in our database and is regarded
 (and protected) as personal information.
 See the personal information section for more information.
