Changes related to fixing font size and standardizing AV/opendsaAV.css

--- a/AV/Sorting/MSprofHelp.html
+++ b/AV/Sorting/MSprofHelp.html
@@ -3,8 +3,7 @@
 <head>
   <title>Mergesort Proficiency Exercise Help Page</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="../help.css" type="text/css" />
-  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/site.css" type="text/css" />
 </head>
 
 <body>
