--- a/AV/Sorting/SSavHelp.html
+++ b/AV/Sorting/SSavHelp.html
@@ -3,11 +3,11 @@
 <head>
   <title>ShellSort Visualization Help Page</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="../help.css" type="text/css" />
-  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/site.css" type="text/css" />
 </head>
 
 <body>
+<div id="content">
 <h1>Shellsort Visualization Help Page</h1>
 <p>
 This is a visualization for Shellsort.
@@ -41,6 +41,6 @@ The most important one is the animation speed. If you think that the
 display of the swaps is going too fast or slow, you can adjust it.
 You can also make the values appear in an array as numbers, or as bars.
 </p>
-
+</div>
 </body>
 </html>
