--- a/AV/Sorting/bubblesortAV.html
+++ b/AV/Sorting/bubblesortAV.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
+  <style>
+    #container {
+      width: 765px;
+      height: 550px;
+    }
+  </style>
 </head>
 
 <body>
