--- a/AV/Sorting/selectionsortAV.html
+++ b/AV/Sorting/selectionsortAV.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
   <style>
     #container {
+      width: 765px;
       height: 610px;
     }
   </style>
