Fixed many issues with spacing and size in the AVs and proficiency exercises

--- a/AV/Sorting/MSprofHelp.html
+++ b/AV/Sorting/MSprofHelp.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<div id="content">
 <h1>Mergesort Proficiency Exercise Help Page</h1>
 <p>This exercise asks you to reproduce the merge behavior of the Mergesort algorithm on a random sequence of 10 values.  Initially you will be presented with several blank arrays and 10 numbers in single element arrays at the bottom of the display.  The things that you can do are: click on an element containing a number; and click on a blank element in an array one row above the currently selected element to move the selected element to that location.</p>
 
@@ -31,6 +32,6 @@
   <li>The "About" button will tell you about who wrote this, etc.</li>
   <li>The "Help" button got you here.</li>
 </ul>
-
+</div>
 </body>
 </html>
