--- a/AV/Sorting/QSprofHelp.html
+++ b/AV/Sorting/QSprofHelp.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<div id="content">
 <h1>Quicksort Proficiency Exercise Help Page</h1>
 <p>This exercise asks you to reproduce the high-level behavior of the Quicksort algorithm on a random sequence of 10 values.  Initially you will be presented with an array of numbers.  Follow the steps below to complete the exercise.</p>
 
@@ -81,6 +82,6 @@
   <li>The "About" button will tell you about who wrote this, etc.</li>
   <li>The "Help" button got you here.</li>
 </ul>
-
+</div>
 </body>
 </html>
