--- a/AV/Sorting/ShellsortProficiency.html
+++ b/AV/Sorting/ShellsortProficiency.html
@@ -38,8 +38,8 @@
       </p>
 
       <p>Increments to use:
-        <input type="text" readonly="readonly" name="incrField"
-          id="incrField" width="50">
+        <input type="text" readonly="readonly" name="increments"
+          id="increments" width="50">
         <span class="jsavscore" />
       </p>
 
