--- a/AV/Sorting/radixArrayAV.html
+++ b/AV/Sorting/radixArrayAV.html
@@ -5,6 +5,15 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
+  <style>
+    #container {
+      width: 860px;
+      height: 600px;
+    }
+.jsavline {
+  height: 50px;
+}
+  </style>
 </head>
 
 <body>
