--- a/AV/Sorting/shellsortAV.html
+++ b/AV/Sorting/shellsortAV.html
@@ -5,7 +5,12 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
-  <link rel="stylesheet" href="shellsortAV.css" type="text/css" />
+  <style>
+    #container {
+      width: 780px;
+      height: 480px;
+    }
+  </style>
 </head>
 
 <body>
