Lots of small layout changes

--- a/AV/Hashing/HashingDeleteProficiency.html
+++ b/AV/Hashing/HashingDeleteProficiency.html
@@ -5,7 +5,15 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
-    <link rel="stylesheet" href="HashingDeleteProficiency.css" />
+    <style>
+      #container {
+        height: 325px;
+        width: 780px;
+      }
+      .jsavlabel {
+        font-weight: bold;
+      }      
+    </style>
   </head>
   <body>
     <div id="container">
