--- a/AV/Hashing/MidSquare.html
+++ b/AV/Hashing/MidSquare.html
@@ -6,13 +6,14 @@
   <meta charset="utf-8">
   <title>MidSquare Method</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
   <link rel="stylesheet" href="HashFunc.css" type="text/css" />
 </head>
 
 <body>
   <div id="container">
     <p class="instructions">
-      Type a number. While this is tuned for 4-digit numbers, you can
+      Type a number. This is tuned for 4-digit numbers, but you can
       use any value. The number will be squared, and the two middle
       digits (if the result is an 8-digit number) are highlighted.
     </p>
