--- a/AV/Hashing/StringSfold.html
+++ b/AV/Hashing/StringSfold.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <title>Improved String Folding</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
   <link rel="stylesheet" href="HashFunc.css" type="text/css" />
 </head>
 
