--- a/AV/Hashing/hashAVHelp.html
+++ b/AV/Hashing/hashAVHelp.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
+<div id="content">
 <h1>Hashing Visualization Help Page</h1>
 <p>
 TO DO: Create Help Page
 </p>
-
+</div>
 </body>
 </html>
