--- a/AV/Sorting/ShellsortPerformance.html
+++ b/AV/Sorting/ShellsortPerformance.html
@@ -27,7 +27,7 @@
     <form id="ssperform">
       <p><label for="increments">Increments: Type your increment
                                  series below.</label></p>
-      <input type="text" id="increments" size="50" name="increments"
+      <input type="text" id="increments" size="42" name="increments"
              placeholder="Space separated values, for example 8 4 2 1" />
       <p>
         <input type="button" id="run" name="run" value="Run" />
@@ -49,8 +49,8 @@
          Insertion Sort and the cost for the "divide by 2" increments.</p>
       <p>You can set the list size. Run this on some bigger lists
          to get a more realistic idea of the costs.</p>
-      <p>Your goal should be to come up with an increment series that
-      needs fewer comparisons and swaps than the Divide-by-twos series.</p>
+      <p>Your goal is to come up with an increment series that
+      needs fewer comparisons and swaps than the "divide by 2" series.</p>
     </div> <!--directions-->
   </div> <!--right-->
 </div> <!--container-->
