--- a/AV/Sorting/radixLinkAV.html
+++ b/AV/Sorting/radixLinkAV.html
@@ -16,7 +16,7 @@
         <input type="button" id="help" name="help" value="Help" />
       </td>
       <td class="headerCenter">
-        <h1>Linked List Radix Sort Visualization</h1>
+        <h1>Radix Sort: Linked List</h1>
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
@@ -30,10 +30,7 @@
       <input type="button" id="run" name="run" value="Run" />
       <input type="button" id="reset" name="reset" value="Reset" />
       <label for="arraysize">&nbsp;Array size:&nbsp;</label>
-      <select id="arraysize">
-      </select>
-
-      <!-- Number of Digits -->
+      <select id="arraysize"></select>
       <label for="digitsize">&nbsp;Digits:&nbsp;</label> 
       <select id="digitsize">
         <option value="1"> 1 </option>
@@ -41,8 +38,10 @@
         <option value="3"> 3 </option>
         <option value="4"> 4 </option>
       </select>
+    </p>
+    <p>
       <label for="arrayValues">&nbsp;Array values:&nbsp;</label>
-      <input size="65" name="arrayValues" id="arrayValues" type="text" 
+      <input size="55" name="arrayValues" id="arrayValues" type="text" 
          placeholder="Type space-separated values, or click 'run' to use random values" />
     </p>
   </form>
