--- a/AV/Sorting/shellsortAV.html
+++ b/AV/Sorting/shellsortAV.html
@@ -40,10 +40,11 @@
       <input type="button" id="run" name="run" value="Run" />
       <input type="button" id="reset" name="reset" value="Reset" />
       <label for="arraysize">&nbsp;Array size:&nbsp;</label>
-      <select id="arraysize">
-      </select>
+      <select id="arraysize"></select>
+    </p>
+    <p>
       <label for="arrayValues">&nbsp;Array values:&nbsp;</label>
-      <input size="65" name="arrayValues" id="arrayValues" type="text" 
+      <input size="55" name="arrayValues" id="arrayValues" type="text" 
          placeholder="Type space-separated values, or just hit 'run' to use random values" />
     </p>
   </form>
