--- a/AV/Sorting/insertionsortAV.html
+++ b/AV/Sorting/insertionsortAV.html
@@ -8,7 +8,7 @@
   <style>
     #container {
       width: 780px;
-      height: 560px;
+      height: 570px;
     }
   </style>
 </head>
@@ -34,10 +34,11 @@
       <input id="run" type="button" name="run" value="Run" />
       <input id="reset" type="button" name="reset" value="Reset" />
       <label for="arraysize">&nbsp;List size:&nbsp;</label>
-      <select id="arraysize">
-      </select>
+      <select id="arraysize"></select>
+    </p>
+    <p>
       <label for="arrayValues">&nbsp;Your values:&nbsp;</label>
-      <input size="60" name="arrayValues" id="arrayValues" type="text" 
+      <input size="55" name="arrayValues" id="arrayValues" type="text" 
          placeholder="Type space-separated values, or just hit 'run' to use random values" />
     </p>
   </form>
