--- a/AV/Sorting/mergesortAV.html
+++ b/AV/Sorting/mergesortAV.html
@@ -29,8 +29,9 @@
       <input id="run" type="button" name="run" value="Run" />
       <input id="reset" type="button" name="reset" value="Reset" />
       <label for="arraysize">&nbsp;List size:&nbsp;</label>
-      <select id="arraysize">
-      </select>
+      <select id="arraysize"></select>
+    </p>
+    <p>
       <label for="arrayValues">&nbsp;Your values:&nbsp;</label>
       <input size="60" name="arrayValues" id="arrayValues" type="text"
           placeholder="Space-separated values to use (optional)" />
