--- a/AV/Sorting/quicksortProficiency.html
+++ b/AV/Sorting/quicksortProficiency.html
@@ -32,16 +32,16 @@
       Quicksort, except that the details of the partion step are done
       for you. You must do a series of the following steps until the
       array is completely sorted.
-      <br>(1) Select the pivot element and move it to the appropriate location;
+      <br>(1) Select the pivot element and move it to the appropriate location.
       <br>(2) Select the left and right endpoints of the range you
       wish to partition and click "Partition".
       <br>(3) Once the partition operation has been done for you,
-      click the location where the pivot point should be moved to.
+      click the location where the pivot value should be moved to.
       <br>(4)When a selected element has been moved to its final sorted
       location, click "Mark Selected as Sorted".
       <br>Repeat these steps until the array is sorted. If you have
-      trouble understanding what you are supposed to do, try running
-      through a "Model Answer" to see how it is supposed to be done.
+      trouble understanding what you are supposed to do, try viewing
+      a "Model Answer" to see how it is supposed to be done.
       <br /><br />
 
       Always select the left and right endpoints, even if it is the
