Update to JSAV 0.6.0-70; fixes to hashAV

--- a/AV/Hashing/hashAV.html
+++ b/AV/Hashing/hashAV.html
@@ -78,7 +78,8 @@
           <option value="15">15</option>
           <option value="16">16</option>
         </select>
-
+      </p>
+      <p>
         <!-- Input Text Field -->
         <label for="input">Input:</label>
         <input size="10" name="input" id="input" type="text" />
@@ -86,10 +87,7 @@
         <!-- Buttons -->
         <input type="button" id="next" name="next" value="Next" />
         <input type="button" id="reset" name="reset" value="Restart" />
-      </p>
-
-      <!-- Second row of controls -->
-      <p align="left">
+      <!-- Hidden controls -->
         <select id="keyrange">
           <option selected value="0">Key Range</option>
           <option value="1">0 - 99</option>
