Removed custom HTML tag. Replaced it with inline <p> element.

--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -133,7 +133,7 @@
         {% block body %}{% endblock %}
       </div>
       <div class="bottomnav">
-      <p><odsa class="email_div"></odsa>&#160;&#160;         
+      <p><span class="email_div" style="display:inline;"></span>&#160;&#160;         
       {{ nav() }}</p>
       </div>
       <img style="float:right;" src="_static/nsf1.gif" height="62" width="62" alt="nsf"/> 
